@@ -25,3 +25,4 @@ for version 0.0.14:
 	http://liberopops.diludovico.it/index.php?showtopic=858
 	add help GLOBAL variable to plugins so that one can read the 
 		instructions readin the file (used by MacFP)
+	http://liberopops.diludovico.it/index.php?showtopic=877&st=0&#entry4499
